components/batterycontrol: Re-use battery names correctly Previously, if a battery was seen twice, it would not re-use the existing name, leading to the user seeing a single battery called "Battery 2". The code has also been re-written to be more intelligible.

BUG: 492480